	ALL_FACTORS. Changed all callers.
	(gcry_prime_generate): Make the factors arg optional. Request
	all_factors.  Make sure PRIME is set to NULL even on error.
	(gcry_prime_group_generator): New.
	(gcry_prime_release_factors): New.

2003-10-06  Werner Koch  <wk@gnupg.org>

	* primegen.c (gen_prime): Assert that NBITS is never zero, it
	would cause a segv.

2003-09-04  Werner Koch  <wk@gnupg.org>

	* pubkey.c (_gcry_pk_aliased_algo_name): New.
	* ac.c (gcry_ac_open): Use it here.

	* Makefile.am (EXTRA_libcipher_la_SOURCES): Add serpent.c

2003-09-02  Moritz Schulte  <mo@g10code.com>

	* primegen.c (gcry_prime_check, gcry_prime_generate): New
	functions.
	(prime_generate_internal): New function, based on
	_gcry_generate_elg_prime.
	(_gcry_generate_elg_prime): Rewritten as a wrapper for
	prime_generate_internal.

2003-08-28  Werner Koch  <wk@gnupg.org>

	* pubkey.c (gcry_pk_encrypt): Don't include the flags list in the
	return value.  This does not make sense and breaks any programs
	parsing the output strictly (e.g. current gpgsm).
	(gcry_pk_encrypt): If aliases for the algorithm name exists, take
	the first one instead of the regular name to adhere to SPKI
	conventions.
	(gcry_pk_genkey): Ditto.
	(gcry_pk_sign): Ditto. Removed unused KEY_ALGO_NAME.

2003-08-19  Moritz Schulte  <mo@g10code.com>

	* cipher.c: Add support for Serpent
	* serpent.c: New file.

2003-08-10  Moritz Schulte  <moritz@g10code.com>

	* rsa.c (_gcry_rsa_blind, _gcry_rsa_unblind): Declare static.

2003-08-09  Timo Schulz  <twoaday@freakmail.de>

	* random.c (getfnc_gather_random): Don't check NAME_OF_DEV_RANDOM
	two times, but also the NAME_OF_DEV_URANDOM device.
	
2003-08-08  Moritz Schulte  <moritz@g10code.com>

	* pubkey.c (sexp_to_enc): Fixed extraction of S-Expression: do not
	fail if no `flags' sub S-Expression is found.

2003-07-27  Werner Koch  <wk@gnupg.org>

	* md.c (gcry_md_lookup_func_oid): Allow for empty OID lists.

2003-07-23  Moritz Schulte  <moritz@g10code.com>
